@@ -501,15 +501,15 @@ Or maybe for you it is with tabs.
 
 In Terminator you can rename three things:
 
-+----------------+---------------------------+--------------------+
-| Edit           | Mouse                     | Default Shortcut   |
-+================+===========================+====================+
-| Window title   | N/A                       | ``Ctrl``\ +\ ``W`` |
-+----------------+---------------------------+--------------------+
-| Tab title      | ``double-click`` tab      | ``Ctrl``\ +\ ``A`` |
-+----------------+---------------------------+--------------------+
-| Terminal title | ``double-click`` titlebar | ``Ctrl``\ +\ ``X`` |
-+----------------+---------------------------+--------------------+
++----------------+---------------------------+--------------------------------+
+| Edit           | Mouse                     | Default Shortcut               |
++================+===========================+================================+
+| Window title   | N/A                       | ``Ctrl``\ +\ ``Alt``\ +\ ``W`` |
++----------------+---------------------------+--------------------------------+
+| Tab title      | ``double-click`` tab      | ``Ctrl``\ +\ ``Alt``\ +\ ``A`` |
++----------------+---------------------------+--------------------------------+
+| Terminal title | ``double-click`` titlebar | ``Ctrl``\ +\ ``Alt``\ +\ ``X`` |
++----------------+---------------------------+--------------------------------+
 
 Additionally all three can be saved/loaded from a :ref:`layout <layouts>`,
 or the window title can be set using a
