@@ -907,9 +907,9 @@ Or maybe for you it is with tabs.</p>
 <p>In Terminator you can rename three things:</p>
 <table border="1" class="docutils">
 <colgroup>
-<col width="25%" />
+<col width="21%" />
+<col width="36%" />
 <col width="43%" />
-<col width="32%" />
 </colgroup>
 <thead valign="bottom">
 <tr class="row-odd"><th class="head">Edit</th>
@@ -920,15 +920,15 @@ Or maybe for you it is with tabs.</p>
 <tbody valign="top">
 <tr class="row-even"><td>Window title</td>
 <td>N/A</td>
-<td><code class="docutils literal"><span class="pre">Ctrl</span></code>+<code class="docutils literal"><span class="pre">W</span></code></td>
+<td><code class="docutils literal"><span class="pre">Ctrl</span></code>+<code class="docutils literal"><span class="pre">Alt</span></code>+<code class="docutils literal"><span class="pre">W</span></code></td>
 </tr>
 <tr class="row-odd"><td>Tab title</td>
 <td><code class="docutils literal"><span class="pre">double-click</span></code> tab</td>
-<td><code class="docutils literal"><span class="pre">Ctrl</span></code>+<code class="docutils literal"><span class="pre">A</span></code></td>
+<td><code class="docutils literal"><span class="pre">Ctrl</span></code>+<code class="docutils literal"><span class="pre">Alt</span></code>+<code class="docutils literal"><span class="pre">A</span></code></td>
 </tr>
 <tr class="row-even"><td>Terminal title</td>
 <td><code class="docutils literal"><span class="pre">double-click</span></code> titlebar</td>
-<td><code class="docutils literal"><span class="pre">Ctrl</span></code>+<code class="docutils literal"><span class="pre">X</span></code></td>
+<td><code class="docutils literal"><span class="pre">Ctrl</span></code>+<code class="docutils literal"><span class="pre">Alt</span></code>+<code class="docutils literal"><span class="pre">X</span></code></td>
 </tr>
 </tbody>
 </table>
